[package]
name = "hex-patch"
description = """
HexPatch is a binary patcher and editor with terminal user interface (TUI),
it's capable of disassembling instructions and assembling patches.
It supports a variety of architectures and file formats.
Also, it can edit remote files via SSH."""
version = "1.11.3"
authors = ["Ettore Ricci"]
edition = "2021"
readme = "docs/README.md"
license = "MIT"
homepage = "https://etto48.github.io/HexPatch/"
repository = "https://github.com/Etto48/HexPatch"
keywords = ["reverse-engineering","tui","hex-editor","binary-patching"]
categories = ["command-line-utilities","development-tools"]
build = "build.rs"

[package.metadata.i18n]
available-locales = ["en", "it-IT"]
default-locale = "en"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[target.'cfg(windows)'.build-dependencies]
winres = "0.1.12"

[dependencies]
bitflags = { version = "2.9.1", features = ["std"] }
capstone = "0.13.0"
clap = { version = "4.5.39", features = ["derive"] }
crossterm = { version = "0.29.0", features = ["serde"] }
dirs = "6.0.0"
hexpatch-keystone = { version = "0.9.4", features = ["build_keystone_cmake"] }
macro_rules_attribute = "0.2.0"
mlua = { version = "0.10.5", features = ["lua54", "vendored", "serialize"] }
object = "0.36.7"
pdb = "0.8.0"
ratatui = { version = "0.29.0", features = ["serde"] }
regex = "1.11.1"
russh = "0.52.1"
russh-sftp = "2.1.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
symbolic-demangle = "12.15.5"
tempfile = "3.20.0"
tokio = "1.45.1"
termbg = "0.6.2"
rust-i18n = "3.1.5"

[target.'cfg(windows)'.dependencies]
winapi = "0.3.9"
