[package]
name = "hex-patch"
description = """
HexPatch is a binary patcher and editor with terminal user interface (TUI),
it's capable of disassembling instructions and assembling patches.
It supports a variety of architectures and file formats.
Also, it can edit remote files via SSH."""
version = "1.12.4"
authors = ["Ettore Ricci"]
edition = "2021"
readme = "docs/README.md"
license = "MIT"
homepage = "https://etto48.github.io/HexPatch/"
repository = "https://github.com/Etto48/HexPatch"
keywords = ["reverse-engineering","tui","hex-editor","binary-patching"]
categories = ["command-line-utilities","development-tools", "security"]
build = "build.rs"

[package.metadata.i18n]
available-locales = ["en", "it-IT", "fr-FR", "es-ES", "de-DE", "ja-JP", "zh-CN", "zh-TW", "zh-HK", "tr-TR"]
default-locale = "en"

[features]
default = ["hexpatch-keystone/build_keystone_cmake"]
use_system_keystone = ["hexpatch-keystone/use_system_keystone"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[target.'cfg(windows)'.build-dependencies]
winres = "0.1.12"

[dependencies]
bitflags = { version = "2.9.4", features = ["std"] }
capstone = "0.13.0"
clap = { version = "4.5.48", features = ["derive"] }
crossterm = { version = "0.29.0", features = ["serde"] }
dirs = "6.0.0"
hexpatch-keystone = "0.9.4"
macro_rules_attribute = "0.2.2"
mlua = { version = "0.11.3", features = ["lua54", "vendored", "serialize"] }
object = "0.37.3"
pdb = "0.8.0"
ratatui = { version = "0.29.0", features = ["serde"] }
regex = "1.11.3"
russh = { version = "0.54.4", default-features = false, features = ["ring"] }
russh-sftp = "2.1.1"
serde = { version = "1.0.226", features = ["derive"] }
serde_json = "1.0.145"
symbolic-demangle = "12.16.3"
tempfile = "3.23.0"
tokio = "1.47.1"
termbg = "0.6.2"
rust-i18n = "3.1.5"
sys-locale = "0.3.2"
const-str = "0.7.0"

[target.'cfg(windows)'.dependencies]
winapi = "0.3.9"
